--- a/web/index.html
+++ b/web/index.html
@@ -18,12 +18,14 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Dudley Dev. A blog.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="dudley_website">
+  <meta name="apple-mobile-web-app-title" content="dudley_dev_diaries">
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#0A5C5A">
+  <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#0A5C5A">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
